--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Lilita+One&display=swap');
 
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+* {
+    font-family: 'Lilita One', cursive;
+    font-size:larger;
+}
